feat: IAM-1 (Tenant/Project/User/Role 기본) - 백엔드 IAM 도메인/스키마/서비스 - API 구현 (프로젝트 생성/조회, 사용자 생성, 멤버 추가/역할 변경, 임시 RBAC 필터) - 프론트 스켈레톤 (API 클라이언트 레이어, 프로젝트/멤버 관리 화면) - API 계약 업데이트
